# CafeInventoryTracker

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: dialogs.py  main.py  models.py  services.py  storage.py  ui.py  utils.py
tests/: test_services.py  test_storage.py
