[project]
name = "cafestocktracker"
version = "1.0.0"
description = "Cafe Stock Tracker - offline desktop inventory app"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Cafe Owner" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "customtkinter>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pyinstaller>=6.15,<7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
